Fixes bugs in use-cc, adds pool test case.

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,7 @@
 CC = clang
-CFLAGS = -Wall -Wextra -std=gnu99 -g `use-cc alist htable`
+CFLAGS = -Wall -Wextra -std=gnu99 -g `use-cc AL HT POOL`
 
 all: $(patsubst %.c, %, $(wildcard *.c))
 
 clean:
-	rm -f basic al ht 
+	rm -f basic al ht pool
