Removes cval on test:cleans.

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,4 +4,4 @@ CFLAGS = -Wall -Wextra -std=gnu99 -g `use-cc AL HT POOL`
 all: $(patsubst %.c, %, $(wildcard *.c))
 
 clean:
-	rm -f basic al ht pool
+	rm -f basic al ht pool cval
