--- a/test/Makefile
+++ b/test/Makefile
@@ -1,7 +1,12 @@
 CC = clang
-CFLAGS = -Wall -Wextra -std=gnu99 -g `use-cc AL HT POOL`
+CFLAGS = -Wall -Wextra -std=gnu99 -O2 `use-cc AL HT POOL`
 
-all: $(patsubst %.c, %, $(wildcard *.c))
+CXX = clang++
+CXXFLAGS = -Wall -Wextra -O2 `use-cc`
+
+all: $(patsubst %.c, %, $(wildcard *.c)) torture-map
+
+torture-map: torture-map.cc
 
 clean:
-	rm -f basic al ht pool cval
+	rm -f basic al ht pool cval torture-ht torture-map
